--- a/.gitignore
+++ b/.gitignore
@@ -13,30 +13,30 @@ capybara-*.html
 /coverage/
 /spec/tmp
 *.orig
-rerun.txt
-pickle-email-*.html
+**/**/rerun.txt
+**/**/pickle-email-*.html
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
+**/**/log/*
+**/**/tmp/*
 !/log/.keep
 !/tmp/.keep
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
-config/initializers/secret_token.rb
-config/master.key
+**/**/config/initializers/secret_token.rb
+**/**/config/master.key
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
 # config/secrets.yml
 
 # dotenv, dotenv-rails
 # TODO Comment out these rules if environment variables can be committed
-.env
-.env.*
+**/**/.env
+**/**/.env.*
 
 ## Environment normalization:
-/.bundle
-/vendor/bundle
+**/**/.bundle
+**/**/vendor/bundle
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
@@ -59,16 +59,16 @@ bower.json
 node_modules/
 
 # Ignore precompiled javascript packs
-/public/packs
-/public/packs-test
-/public/assets
+**/**/public/packs
+**/**/public/packs-test
+**/**/public/assets
 
 # Ignore yarn files
-/yarn-error.log
+**/**/yarn-error.log
 yarn-debug.log*
 .yarn-integrity
 
 # Ignore uploaded files in development
-/storage/*
+**/**/storage/*
 !/storage/.keep
-/public/uploads
+**/**/public/uploads
